trafficM_Kiali_GW_VS_DR/isti/jaeger/jaeger_gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jaeger-ingress-gateway
  namespace: istio-system

spec:

  selector:
    app: istio-ingressgateway
    istio: ingressgateway


  servers:
  - port:
      number: 15443
      name: http-jaeger
      protocol: HTTP
    hosts:
    - "*"
