trafficM_Kiali_GW_VS_DR/isti/jaeger/jaeger_vs_dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"

  gateways:
  - jaeger-ingress-gateway

  http:
  - match:
    - port: 15443
    route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jager-destination-rule
  namespace: istio-system
spec:
  host: tracing.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
